--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.21)
-project(cppLearning)
+cmake_minimum_required(VERSION 3.26)
+project(CppTools)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cppLearning main.cpp
+add_executable(CppTools main.cpp
         mytools.cpp
         mytools.h)
