--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(C:\\Users\\11057\\miniconda3\\include)
 link_libraries(C:/Users/11057/miniconda3/libs/python311.lib)
 
 
+
 add_executable(CppTools main.cpp
         mytools.cpp
-        mytools.h)
+        mytools.h
+)
