update the InputSimulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.26)
 project(cpp-tools)
-
 set(CMAKE_CXX_STANDARD 17)
-
-
-find_package(OpenCV REQUIRED)
 find_package(FFMPEG REQUIRED)
 
 
@@ -14,11 +10,11 @@ add_executable(cpp-tools main.cpp
         lib/FFmpegTool.h
         lib/FFmpegTool.cpp
         lib/multithread.h
-        lib/CVTools.cpp
-        lib/CVTools.h)
+        lib/InputSimulator.cpp
+        lib/InputSimulator.h
+)
 
-
-
+#target_link_libraries(cpp-tools tencentcloud-sdk-cpp-core)
 target_include_directories(cpp-tools PRIVATE ${FFMPEG_INCLUDE_DIRS})
 target_link_directories(cpp-tools PRIVATE ${FFMPEG_LIBRARY_DIRS})
-target_link_libraries(cpp-tools ${OpenCV_LIBS}  ${FFMPEG_LIBRARIES})
+target_link_libraries(cpp-tools ${FFMPEG_LIBRARIES})
