--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
 project(cpp-tools)
 set(CMAKE_CXX_STANDARD 17)
+
+
 find_package(FFMPEG REQUIRED)
 
 
@@ -14,7 +16,10 @@ add_executable(cpp-tools main.cpp
         lib/InputSimulator.h
 )
 
-#target_link_libraries(cpp-tools tencentcloud-sdk-cpp-core)
+
+
+
+
 target_include_directories(cpp-tools PRIVATE ${FFMPEG_INCLUDE_DIRS})
 target_link_directories(cpp-tools PRIVATE ${FFMPEG_LIBRARY_DIRS})
-target_link_libraries(cpp-tools ${FFMPEG_LIBRARIES})
+target_link_libraries(cpp-tools PRIVATE ${FFMPEG_LIBRARIES})
