--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(cpp-tools)
 set(CMAKE_CXX_STANDARD 17)
 
 
+
+
 find_package(FFMPEG REQUIRED)
 
 
@@ -16,10 +18,6 @@ add_executable(cpp-tools main.cpp
         lib/InputSimulator.h
 )
 
-
-
-
-
 target_include_directories(cpp-tools PRIVATE ${FFMPEG_INCLUDE_DIRS})
 target_link_directories(cpp-tools PRIVATE ${FFMPEG_LIBRARY_DIRS})
-target_link_libraries(cpp-tools PRIVATE ${FFMPEG_LIBRARIES})
+target_link_libraries(cpp-tools ${FFMPEG_LIBRARIES})
