--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(FFMPEG REQUIRED libavcodec libavformat libavutil)
 
-find_package(PythonLibs 3.10.12 REQUIRED)
+#find_package(PythonLibs 3.10.12 REQUIRED)
 
 # 假设腾讯云 SDK 安装在了 /path/to/tencentcloud-sdk 路径下
 #set(TENCENTCLOUD_SDK_PATH "/home/yanzzp/Download/tencentcloud-sdk-cpp")
@@ -22,7 +22,7 @@ add_executable(cpp-tools main.cpp
 
 target_include_directories(cpp-tools PRIVATE
         ${FFMPEG_INCLUDE_DIRS}
-        ${PYTHON_INCLUDE_DIRS}
+#        ${PYTHON_INCLUDE_DIRS}
 )
 
 target_link_directories(cpp-tools PRIVATE
@@ -34,7 +34,7 @@ target_link_directories(cpp-tools PRIVATE
 target_link_libraries(cpp-tools
         PRIVATE
         ${FFMPEG_LIBRARIES}
-        ${PYTHON_LIBRARIES}
+#        ${PYTHON_LIBRARIES}
         # 链接腾讯云 SDK 核心库
 #        tencentcloud-sdk-cpp-core
 )
